在课程管理功能的返回给前端数据的方面，做了相应的适配类，以及对mybatis-plus框架的使用做了更符合标准写法的修改。